--- a/notebooks/reports/OpenAI/2.1_text_to_descriptions.ipynb
+++ b/notebooks/reports/OpenAI/2.1_text_to_descriptions.ipynb
@@ -16,6 +16,8 @@
     "from tqdm import tqdm\n",
     "import collections\n",
     "import spacy\n",
+    "import json\n",
+    "import glob\n",
     "from spacy import displacy"
    ]
   },
@@ -28,7 +30,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at distilbert-base-uncased were not used when initializing DistilBertModel: ['vocab_layer_norm.bias', 'vocab_projector.weight', 'vocab_layer_norm.weight', 'vocab_projector.bias', 'vocab_transform.weight', 'vocab_transform.bias']\n",
+      "Some weights of the model checkpoint at distilbert-base-uncased were not used when initializing DistilBertModel: ['vocab_projector.bias', 'vocab_projector.weight', 'vocab_transform.weight', 'vocab_layer_norm.bias', 'vocab_layer_norm.weight', 'vocab_transform.bias']\n",
       "- This IS expected if you are initializing DistilBertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing DistilBertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -287,27 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "42"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(caribbean_text_dict.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,48 +319,104 @@
     "            if new_paragraph:\n",
     "                description_paragraph_dict[species].append(' '.join(new_paragraph))\n",
     "\n",
-    "    return description_paragraph_dict, description_sentence_dict"
+    "    return description_paragraph_dict, description_sentence_dict\n",
+    "\n",
+    "\n",
+    "def species_paragraphs_to_json(text_dict):\n",
+    "\n",
+    "    folder_paragraphs = \"../../../data/OpenAI/DescriptionSnippets/Paragraphs/\"\n",
+    "    folder_sentences = \"../../../data/OpenAI/DescriptionSnippets/Sentences/\"\n",
+    "\n",
+    "\n",
+    "    # for idx, (species, paragraphs) in (pbar := tqdm(enumerate(text_dict.items()), leave=True, position=0)):\n",
+    "    #     pbar.set_description(f\"{idx} {species}\")\n",
+    "\n",
+    "    for idx, (species, paragraphs) in enumerate(text_dict.items()): \n",
+    "\n",
+    "        # Folder Naming\n",
+    "        species_name = species.replace(' ', '_')\n",
+    "        file_name_sent = F\"caribbean_{species_name}_descriptions_sentences\"\n",
+    "        file_name_para = F\"caribbean_{species_name}_descriptions_paragraphs\"\n",
+    "\n",
+    "        # Files Already done\n",
+    "        jsons_done = glob.glob(\"../../../data/OpenAI/DescriptionSnippets/Paragraphs/*\")\n",
+    "        final_name = F\"{folder_paragraphs}{file_name_para}.json\"\n",
+    "        final_name = F\"{folder_paragraphs}{file_name_para}.json\"\n",
+    "        if final_name in jsons_done:\n",
+    "            continue\n",
+    "\n",
+    "        # Init dict\n",
+    "        description_paragraph_dict = collections.defaultdict(list)\n",
+    "        description_sentence_dict = collections.defaultdict(list)\n",
+    "\n",
+    "        for paragraph in (pbar := tqdm(paragraphs, leave=False, position=0)):\n",
+    "            pbar.set_description(f\"{idx} {species}\")\n",
+    "\n",
+    "            # Not able to tokenize\n",
+    "            if len(paragraph) > 50000: # Was 800.000\n",
+    "                continue\n",
+    "\n",
+    "            doc = nlp(paragraph)\n",
+    "            new_paragraph = []\n",
+    "\n",
+    "            for sent in doc.sents:\n",
+    "\n",
+    "                if classify_text(sent.text, model=model):\n",
+    "\n",
+    "                    description_sentence_dict[species].append(sent.text)\n",
+    "                    new_paragraph.append(sent.text)\n",
+    "\n",
+    "            if new_paragraph:\n",
+    "                description_paragraph_dict[species].append(' '.join(new_paragraph))\n",
+    "\n",
+    "        with open(F\"{folder_sentences}{file_name_sent}.json\", 'w') as fp:\n",
+    "            json.dump(description_sentence_dict, fp)\n",
+    "\n",
+    "        with open(F\"{folder_paragraphs}{file_name_para}.json\", 'w') as fp:\n",
+    "            json.dump(description_paragraph_dict, fp)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# caribbean_text_dict = {k: caribbean_text_dict[k][0:20] for k in list(caribbean_text_dict)[:4]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Paragraph:  14%|█▍        | 17/118 [00:04<00:21,  4.64it/s]   Token indices sequence length is longer than the specified maximum sequence length for this model (944 > 512). Running this sequence through the model will result in indexing errors\n",
-      "Paragraph:   1%|          | 46/4915 [00:25<07:54, 10.26it/s]  "
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCanceled future for execute_request message before replies were done"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "31 Krugiodendron ferreum:  66%|██████▌   | 357/541 [00:37<00:17, 10.43it/s]Token indices sequence length is longer than the specified maximum sequence length for this model (560 > 512). Running this sequence through the model will result in indexing errors\n",
+      "                                                                               \r"
      ]
     }
    ],
    "source": [
-    "caribbean_description_paragraph_dict, caribbean_description_sentence_dict = paragraph_to_descriptions(caribbean_text_dict)\n",
+    "species_paragraphs_to_json(caribbean_text_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# caribbean_description_paragraph_dict, caribbean_description_sentence_dict = paragraph_to_descriptions(caribbean_text_dict)\n",
     "# palms_description_paragraph_dict, palms_description_sentence_dict = paragraph_to_descriptions(palms_text_dict)\n",
     "# plantnet_description_paragraph_dict, plantnet_description_sentence_dict = paragraph_to_descriptions(plantnet_text_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,12 +429,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_text = \"../../../data/OpenAI/DescriptionSnippets/\"\n",
+    "# folder_text = \"../../../data/OpenAI/DescriptionSnippets/\"\n",
     "\n",
-    "with open(F\"{folder_text}descriptions_paragraphs_caribbean.pkl\", 'wb') as f:\n",
-    "    pickle.dump(caribbean_description_paragraph_dict, f)\n",
-    "with open(F\"{folder_text}descriptions_sentences_caribbean.pkl\", 'wb') as f:\n",
-    "    pickle.dump(caribbean_description_sentence_dict, f)\n",
+    "# with open(F\"{folder_text}descriptions_paragraphs_caribbean.pkl\", 'wb') as f:\n",
+    "#     pickle.dump(caribbean_description_paragraph_dict, f)\n",
+    "# with open(F\"{folder_text}descriptions_sentences_caribbean.pkl\", 'wb') as f:\n",
+    "#     pickle.dump(caribbean_description_sentence_dict, f)\n",
     "\n",
     "# with open(F\"{folder_text}descriptions_paragraphs_palms.pkl\", 'wb') as f:\n",
     "#     pickle.dump(palms_description_paragraph_dict, f)\n",
