--- a/notebooks/reports/OpenAI/1.0_urls_google.ipynb
+++ b/notebooks/reports/OpenAI/1.0_urls_google.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "67da1540",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "62218066",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "06d6ca39-dc5b-4e26-a3a3-459a9318b4a9",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "2419e4aa",
    "metadata": {},
    "outputs": [],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "71375753",
    "metadata": {},
    "outputs": [],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "a43f630c",
    "metadata": {},
    "outputs": [
@@ -407,10 +407,64 @@
        " 'Cordia myxa',\n",
        " 'Cordia sinensis',\n",
        " 'Cordyla pinnata',\n",
-       " 'Crateva adansonii']"
+       " 'Crateva adansonii',\n",
+       " 'Crescentia cujete',\n",
+       " 'Crossopteryx febrifuga',\n",
+       " 'Croton gratissimus',\n",
+       " 'Croton macrostachyus',\n",
+       " 'Croton psedopulchellus',\n",
+       " 'Cussonia arborea',\n",
+       " 'Cynometra vogelii',\n",
+       " 'Dalbergia boehmii',\n",
+       " 'Dalbergia melanoxylon',\n",
+       " 'Dalbergia sissoo',\n",
+       " 'Daniellia oliveri',\n",
+       " 'Delonix regia',\n",
+       " 'Detarium microcarpum',\n",
+       " 'Detarium senegalense',\n",
+       " 'Dialium guineense',\n",
+       " 'Dichrostachys cinerea',\n",
+       " 'Diospyros mespiliformis',\n",
+       " 'Dombeya quinqueseta var. senegalensis',\n",
+       " 'Ekebergia senegalensis',\n",
+       " 'Elaeis guineensis',\n",
+       " 'Englerina lecardii',\n",
+       " 'Entada abyssinica',\n",
+       " 'Entada africana',\n",
+       " 'Erythrina senegalensis',\n",
+       " 'Erythrina sigmoidea',\n",
+       " 'Erythrophleum africanum',\n",
+       " 'Erythrophleum suaveolens',\n",
+       " 'Eucalyptus camaldulensis',\n",
+       " 'Eucalyptus citriodora',\n",
+       " 'Eucalyptus tereticornis',\n",
+       " 'Eugenia nigerina',\n",
+       " 'Euphorbia balsamifera',\n",
+       " 'Euphorbia kamerunica',\n",
+       " 'Euphorbia paganorum',\n",
+       " 'Euphorbia poissoni',\n",
+       " 'Euphorbia sudanica',\n",
+       " 'Euphorbia tirucalli',\n",
+       " 'Fadogia erythrophloea',\n",
+       " 'Faidherbia albida',\n",
+       " 'Feretia apodanthera',\n",
+       " 'Ficus abutilifolia',\n",
+       " 'Ficus asperifolia',\n",
+       " 'Ficus capreifolia',\n",
+       " 'Ficus cordata ssp. lecardii',\n",
+       " 'Ficus dicranostyla',\n",
+       " 'Ficus exasperata',\n",
+       " 'Ficus glumosa',\n",
+       " 'Ficus ingens',\n",
+       " 'Ficus natalensis',\n",
+       " 'Ficus ovata',\n",
+       " 'Ficus platyphylla',\n",
+       " 'Ficus polita',\n",
+       " 'Ficus sur',\n",
+       " 'Ficus sycomorus ssp. gnaphalocarpa']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "2317deb2",
    "metadata": {},
    "outputs": [
@@ -541,28 +595,82 @@
       "Cordia myxa done\n",
       "Cordia sinensis done\n",
       "Cordyla pinnata done\n",
-      "Crateva adansonii done\n"
+      "Crateva adansonii done\n",
+      "Crescentia cujete done\n",
+      "Crossopteryx febrifuga done\n",
+      "Croton gratissimus done\n",
+      "Croton macrostachyus done\n",
+      "Croton psedopulchellus done\n",
+      "Cussonia arborea done\n",
+      "Cynometra vogelii done\n",
+      "Dalbergia boehmii done\n",
+      "Dalbergia melanoxylon done\n",
+      "Dalbergia sissoo done\n",
+      "Daniellia oliveri done\n",
+      "Delonix regia done\n",
+      "Detarium microcarpum done\n",
+      "Detarium senegalense done\n",
+      "Dialium guineense done\n",
+      "Dichrostachys cinerea done\n",
+      "Diospyros mespiliformis done\n",
+      "Dombeya quinqueseta var. senegalensis done\n",
+      "Ekebergia senegalensis done\n",
+      "Elaeis guineensis done\n",
+      "Englerina lecardii done\n",
+      "Entada abyssinica done\n",
+      "Entada africana done\n",
+      "Erythrina senegalensis done\n",
+      "Erythrina sigmoidea done\n",
+      "Erythrophleum africanum done\n",
+      "Erythrophleum suaveolens done\n",
+      "Eucalyptus camaldulensis done\n",
+      "Eucalyptus citriodora done\n",
+      "Eucalyptus tereticornis done\n",
+      "Eugenia nigerina done\n",
+      "Euphorbia balsamifera done\n",
+      "Euphorbia kamerunica done\n",
+      "Euphorbia paganorum done\n",
+      "Euphorbia poissoni done\n",
+      "Euphorbia sudanica done\n",
+      "Euphorbia tirucalli done\n",
+      "Fadogia erythrophloea done\n",
+      "Faidherbia albida done\n",
+      "Feretia apodanthera done\n",
+      "Ficus abutilifolia done\n",
+      "Ficus asperifolia done\n",
+      "Ficus capreifolia done\n",
+      "Ficus cordata ssp. lecardii done\n",
+      "Ficus dicranostyla done\n",
+      "Ficus exasperata done\n",
+      "Ficus glumosa done\n",
+      "Ficus ingens done\n",
+      "Ficus natalensis done\n",
+      "Ficus ovata done\n",
+      "Ficus platyphylla done\n",
+      "Ficus polita done\n",
+      "Ficus sur done\n",
+      "Ficus sycomorus ssp. gnaphalocarpa done\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 37%|███▋      | 133/361 [00:44<01:15,  3.02it/s]\n"
+      " 52%|█████▏    | 187/361 [00:49<00:46,  3.77it/s]\n"
      ]
     },
     {
      "ename": "HttpError",
-     "evalue": "<HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Eucalyptus+camaldulensis+description&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">",
+     "evalue": "<HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Haematostaphis+barteri+attributes&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mHttpError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 13\u001b[0m\n\u001b[1;32m      8\u001b[0m search_query \u001b[39m=\u001b[39m \u001b[39mF\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mplantnet\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{\u001b[39;00mquery\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     10\u001b[0m \u001b[39m# print(search_query)\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \n\u001b[1;32m     12\u001b[0m \u001b[39m# Search results (10 per search)\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m search_results \u001b[39m=\u001b[39m google_search(search_query, api_key\u001b[39m=\u001b[39;49mapi_key, cse_id\u001b[39m=\u001b[39;49mcse_id)\n\u001b[1;32m     14\u001b[0m \u001b[39m# Google Urls\u001b[39;00m\n\u001b[1;32m     15\u001b[0m plantnet_species_google[plantnet] \u001b[39m=\u001b[39m search_results\n",
-      "Cell \u001b[0;32mIn[3], line 9\u001b[0m, in \u001b[0;36mgoogle_search\u001b[0;34m(search_term, api_key, cse_id, **kwargs)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mCreates a search link for the custom Google search.\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      8\u001b[0m service \u001b[39m=\u001b[39m build(\u001b[39m\"\u001b[39m\u001b[39mcustomsearch\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mv1\u001b[39m\u001b[39m\"\u001b[39m, developerKey\u001b[39m=\u001b[39mapi_key)\n\u001b[0;32m----> 9\u001b[0m res \u001b[39m=\u001b[39m service\u001b[39m.\u001b[39;49mcse()\u001b[39m.\u001b[39;49mlist(q\u001b[39m=\u001b[39;49msearch_term, cx\u001b[39m=\u001b[39;49mcse_id, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\u001b[39m.\u001b[39;49mexecute()\n\u001b[1;32m     10\u001b[0m \u001b[39mreturn\u001b[39;00m res[\u001b[39m'\u001b[39m\u001b[39mitems\u001b[39m\u001b[39m'\u001b[39m]\n",
+      "Cell \u001b[0;32mIn[15], line 13\u001b[0m\n\u001b[1;32m      8\u001b[0m search_query \u001b[39m=\u001b[39m \u001b[39mF\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mplantnet\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{\u001b[39;00mquery\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     10\u001b[0m \u001b[39m# print(search_query)\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \n\u001b[1;32m     12\u001b[0m \u001b[39m# Search results (10 per search)\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m search_results \u001b[39m=\u001b[39m google_search(search_query, api_key\u001b[39m=\u001b[39;49mapi_key, cse_id\u001b[39m=\u001b[39;49mcse_id)\n\u001b[1;32m     14\u001b[0m \u001b[39m# Google Urls\u001b[39;00m\n\u001b[1;32m     15\u001b[0m plantnet_species_google[plantnet] \u001b[39m=\u001b[39m search_results\n",
+      "Cell \u001b[0;32mIn[11], line 9\u001b[0m, in \u001b[0;36mgoogle_search\u001b[0;34m(search_term, api_key, cse_id, **kwargs)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mCreates a search link for the custom Google search.\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      8\u001b[0m service \u001b[39m=\u001b[39m build(\u001b[39m\"\u001b[39m\u001b[39mcustomsearch\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mv1\u001b[39m\u001b[39m\"\u001b[39m, developerKey\u001b[39m=\u001b[39mapi_key)\n\u001b[0;32m----> 9\u001b[0m res \u001b[39m=\u001b[39m service\u001b[39m.\u001b[39;49mcse()\u001b[39m.\u001b[39;49mlist(q\u001b[39m=\u001b[39;49msearch_term, cx\u001b[39m=\u001b[39;49mcse_id, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\u001b[39m.\u001b[39;49mexecute()\n\u001b[1;32m     10\u001b[0m \u001b[39mreturn\u001b[39;00m res[\u001b[39m'\u001b[39m\u001b[39mitems\u001b[39m\u001b[39m'\u001b[39m]\n",
       "File \u001b[0;32m~/Documents/Wageningen University/Period 0 - GRS 70424 Internship/venv/lib/python3.9/site-packages/googleapiclient/_helpers.py:130\u001b[0m, in \u001b[0;36mpositional.<locals>.positional_decorator.<locals>.positional_wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    128\u001b[0m     \u001b[39melif\u001b[39;00m positional_parameters_enforcement \u001b[39m==\u001b[39m POSITIONAL_WARNING:\n\u001b[1;32m    129\u001b[0m         logger\u001b[39m.\u001b[39mwarning(message)\n\u001b[0;32m--> 130\u001b[0m \u001b[39mreturn\u001b[39;00m wrapped(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
       "File \u001b[0;32m~/Documents/Wageningen University/Period 0 - GRS 70424 Internship/venv/lib/python3.9/site-packages/googleapiclient/http.py:938\u001b[0m, in \u001b[0;36mHttpRequest.execute\u001b[0;34m(self, http, num_retries)\u001b[0m\n\u001b[1;32m    936\u001b[0m     callback(resp)\n\u001b[1;32m    937\u001b[0m \u001b[39mif\u001b[39;00m resp\u001b[39m.\u001b[39mstatus \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m300\u001b[39m:\n\u001b[0;32m--> 938\u001b[0m     \u001b[39mraise\u001b[39;00m HttpError(resp, content, uri\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39muri)\n\u001b[1;32m    939\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpostproc(resp, content)\n",
-      "\u001b[0;31mHttpError\u001b[0m: <HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Eucalyptus+camaldulensis+description&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">"
+      "\u001b[0;31mHttpError\u001b[0m: <HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Haematostaphis+barteri+attributes&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">"
      ]
     }
    ],
@@ -598,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "5e85ab2e",
    "metadata": {},
    "outputs": [],
