--- a/notebooks/reports/OpenAI/5.1_ChatGPT_prompting.ipynb
+++ b/notebooks/reports/OpenAI/5.1_ChatGPT_prompting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,12 +101,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "paragraph_folder = \"../../../data/OpenAI/DescriptionSnippets/Paragraphs/\"\n",
-    "sentence_folder = \"../../../data/OpenAI/DescriptionSnippets/Sentences/\"\n",
+    "paragraph_folder = \"../../../data/OpenAI/DescriptionSnippetsCleaned/Paragraphs/\"\n",
+    "sentence_folder = \"../../../data/OpenAI/DescriptionSnippetsCleaned/Sentences/\"\n",
     "\n",
     "caribbean_jsons = glob.glob(F\"{paragraph_folder}c*\")\n",
     "caribbean_jsons.sort()"
@@ -114,17 +114,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(caribbean_jsons[0], 'r') as f:\n",
+    "with open(caribbean_jsons[33], 'r') as f:\n",
     "  caribbean_species_test = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Quadrella odoratissima': ['Familia: Capparaceae Genus: Quadrella Subgenus: Quadrella subg. Quadrella Species: Quadrella odoratissima']}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "caribbean_species_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
